iKYC/SME Phase -1/Istio/Istio-demo/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-gateway
  namespace: istio-microservice
spec:
  selector:
    istio: ingressgateway # 👈 Uses the Istio ingress gateway in istio-system
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # 👈 accept requests for any host (you can restrict later)
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-routing
  namespace: istio-microservice
spec:
  hosts:
    - "*" # 👈 external host, change to domain if needed
  gateways:
    - microservice-gateway
  http:
    - match:
        - uri:
            prefix: /booking
      route:
        - destination:
            host: booking-service
            port:
              number: 80

    - match:
        - uri:
            prefix: /inventory
      route:
        - destination:
            host: inventory-service
            port:
              number: 80

    - match:
        - uri:
            prefix: /shipping
      route:
        - destination:
            host: shipping-service
            port:
              number: 80
